# AppleGameHelper

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  cpp.hint
include/Controllers/: AppController.h  AutomationManager.h  CaptureManager.h  OCRManager.h
include/Controllers/Strategies/: DataCollectionMode.h  ModeStrategy.h  NormalMode.h  ScoreMode.h
include/Core/: AppState.h  AutoWorker.h  GridRemover.h  ImageProcessor.h  OCRWorker.h
include/Main/: AppleGameHelper.h
include/Shared/: AreaCaptureHelper.h  CancellationToken.h  HotKeyManager.h  OverlayHelper.h  RegionSelector.h  StopControllable.h  Types.h
include/Tabs/: MainTab.h
src/: main.cpp
src/Controllers/: AppController.cpp  AutomationManager.cpp  CMakeLists.txt  CaptureManager.cpp  OCRManager.cpp
src/Controllers/Strategies/: CMakeLists.txt  DataCollectionMode.cpp  NormalMode.cpp  ScoreMode.cpp
src/Core/: AutoWorker.cpp  CMakeLists.txt  GridRemover.cpp  ImageProcessor.cpp  OCRWorker.cpp
src/Main/: AppleGameHelper.cpp  CMakeLists.txt
src/Resources/: CMakeLists.txt  resources.qrc
src/Resources/themes/: AppleWoodStyle.qss  MaterialDark.qss  MaterialLight.qss
src/Shared/: AreaCaptureHelper.cpp  CMakeLists.txt  HotKeyManager.cpp  OverlayHelper.cpp  RegionSelector.cpp
src/UI/: CMakeLists.txt  MainTab.cpp
기타/libs/: desktop.ini  tesseract55.lib
